--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moses_app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
     "serve": "node server.js",
